--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
-    "react-uuid": "^1.0.2"
+    "react-uuid": "^1.0.2",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
